# fala-facil-API

./: .coveragerc  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  APIFALAFACIL.md  CHANGELOG.md  LICENSE  Makefile  RAILWAY_DEPLOY.md  README.md  pyproject.toml  pytest.ini  railway.toml  requirements-sentry.txt  requirements.txt  setup.cfg
.aws/: task-definition.json
.cursor/rules/: falafacilrule.mdc
.github/workflows/: main.yml
docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh
docker/alertmanager/: alertmanager.yml
docker/grafana/provisioning/dashboards/: dashboard.yml  fala-facil-dashboard.json
docker/nginx/: Dockerfile  nginx.conf
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: alerts.yml
scripts/: backup_monitoring.sh  restore_monitoring.sh  setup_monitoring.sh
src/: manage.py
src/apps/: __init__.py
src/apps/achievements/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/achievements/migrations/: 0001_initial.py  0002_initial.py  __init__.py
src/apps/achievements/urls/: __init__.py
src/apps/flashcards/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
src/apps/flashcards/migrations/: 0001_initial.py  0002_initial.py  __init__.py
src/apps/flashcards/tests/: __init__.py  test_admin.py  test_create_endpoints.py  test_models.py  test_review_endpoints.py  test_serializers.py  test_services.py  test_views.py
src/apps/flashcards/urls/: __init__.py
src/apps/progress/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/apps/progress/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userprogress_options_and_more.py  __init__.py
src/apps/progress/urls/: __init__.py
src/apps/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/apps/users/urls/: auth.py  users.py
src/config/: __init__.py  api.py  asgi.py  settings.py  urls.py  wsgi.py
src/config/settings/: base.py  local.py  logging.py  production.py  test.py
src/core/: health.py  urls.py  utils.py
