[tool.poetry]
name = "fala-facil-api"
version = "0.1.0"
description = "API REST para o aplicativo Fala Fácil, uma plataforma de aprendizado de idiomas baseada em flashcards"
authors = ["Elvis Mariano <admelvismariano@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
django-environ = "^0.11.2"
django-storages = "^1.14.2"
django-redis = "^5.4.0"
drf-spectacular = "^0.27.0"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular-sidecar = "^2025.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
faker = "^22.5.1"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]
